# FPL_AutoTeam

./: README.md  env.yaml  pyproject.toml  requirements.txt  setup.py
FPL_AutoTeam.egg-info/: SOURCES.txt  top_level.txt
fpl_predictor/: __init__.py  fixture_transfer.py  import_data_func.py  prediction.py  review_points.py  team_stats.py  transfer_recom.py
fpl_predictor/FPL_AutoTeam.egg-info/: PKG-INFO  SOURCES.txt
scripts/: Transfers_main.py  betting_odds.py
