[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-predictor"
version = "0.1.0"
description = "Predict Fantasy Premier League points and transfers using fixtures, data imports, and simulations."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "JKelly", email = "research.foundation.ai@gmail.com" }
]

# Dependencies will be read dynamically from requirements.txt
# instead of being hardcoded here
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/jackkelly75/FPL-AutoTeam"
Issues = "https://github.com/jackkelly75/FPL-AutoTeam/issues"

[tool.setuptools.packages.find]
where = ["FPL-AutoTeam"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }